# ggis-panopticon

./: .gitignore  .gitmodules  README.md  card.py  card_creator.py  card_creator_config.py  card_utils.py  dev_tasks.py  helper.py  input_config.py  input_task.py  requirements.txt  skird.py  skird_cmd.py  task_manager.py  time_log_input.py  time_management.py  us_tasks.py  user.py
c-dolphin/: .clang-format  CMakeLists.txt  card.c  card.h  dependency.sh  dev_tasks.c  env.c  env.h  kaiten_endpoint.c  main.c  main_skird.c  main_time_log.c  string.c  string.h  string_view.c  string_view.h
c-dolphin/libcdolphin/: CMakeLists.txt
c-dolphin/libcdolphin/src/: auto_time_log.c  auto_time_log.h  card.c  card.h  card_creation.c  card_creation.h  cd_string.h  date.c  date.h  dev_tasks.c  dev_tasks.h  env.c  env.h  file.c  file.h  ggis.c  kaiten_endpoint.c  kaiten_endpoint.h  requests.c  requests.h  skird_config.c  skird_config.h  string.c  user.c  user.h
c-dolphin/src/: auto_time_log.c  auto_time_log.h  card.c  card.h  card_creation.c  card_creation.h  dev_tasks.c  dev_tasks.h  env.c  env.h  file.h  ggis.h  kaiten_endpoint.c  kaiten_endpoint.h  main.c  requests.c  requests.h  skird_config.c  skird_config.h  string.c  string.h  string_view.c  string_view.h  user.c  user.h
data/: tasks.txt
json/: auto_time_log.json
json/skird_config/: delivery.json  discovery.json
kaiten/: card.py  session.py  session_manager.py  time_log.py  user.py
tasks_parser/: json.py  simple.py  yaml.py
tui/: MainScreen.py  main_screen.py
tui/tcss/: main.tcss
utils/: card_creator.py  card_utils.py  config_utils.py
